--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".OnePlayer_activity" />
+        <activity android:name=".Category_activity" />
+        <activity android:name=".TwoPlayer_activity" />
+        <activity android:name=".Settings" />
 
-        <activity android:name=".OnePlayer_activity"/>
-        <activity android:name=".Category_activity"/>
-        <activity android:name=".TwoPlayer_activity"/>
-        <activity android:name=".Settings"/>
+        <service
+            android:name=".Controller_ans"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
